@@ -7,9 +7,11 @@ import static no.unit.nva.testutils.RandomDataGenerator.randomString;
 import static no.unit.nva.testutils.RandomDataGenerator.randomUri;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.is;
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.Assert.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
@@ -21,10 +23,10 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.URI;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import no.sikt.nva.nvi.index.aws.OpenSearchClient;
 import no.sikt.nva.nvi.index.aws.SearchClient;
@@ -36,7 +38,6 @@ import no.unit.nva.testutils.HandlerRequestBuilder;
 import nva.commons.apigateway.GatewayResponse;
 import nva.commons.core.Environment;
 import nva.commons.core.paths.UriWrapper;
-import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.opensearch.client.opensearch._types.ShardStatistics;
@@ -65,8 +66,7 @@ public class SearchNviCandidatesHandlerTest {
     private static final int DEFAULT_QUERY_SIZE = 10;
     private static final int DEFAULT_OFFSET_SIZE = 0;
     private static final TypeReference<PaginatedSearchResult<NviCandidateIndexDocument>> TYPE_REF =
-        new TypeReference<>() {
-        };
+        new TypeReference<>() {};
     private static SearchClient<NviCandidateIndexDocument> openSearchClient;
     private static SearchNviCandidatesHandler handler;
     private static ByteArrayOutputStream output;
@@ -81,44 +81,36 @@ public class SearchNviCandidatesHandlerTest {
 
     @Test
     void shouldReturnDocumentFromIndex() throws IOException {
-        var expectedDocument = singleNviCandidateIndexDocument();
-        when(openSearchClient.search(any(), eq(DEFAULT_OFFSET_SIZE), eq(DEFAULT_QUERY_SIZE), any(), any())).thenReturn(
-            createSearchResponse(List.of(expectedDocument), 1));
-        handler.handleRequest(request("*", null, null), output, context);
-        var response = GatewayResponse.fromOutputStream(output, PaginatedSearchResult.class);
-        var pagesSearchResult = objectMapper.readValue(response.getBody(), TYPE_REF);
-        assertEquals(1, pagesSearchResult.getHits().size());
-        assertEquals(expectedDocument, pagesSearchResult.getHits().get(0));
+        when(openSearchClient.search(any(), any(), any(), any(), anyInt(), anyInt()))
+            .thenReturn(createSearchResponse(singleNviCandidateIndexDocument()));
+        handler.handleRequest(request("*"), output, context);
+        var response =
+            GatewayResponse.fromOutputStream(output, PaginatedSearchResult.class);
+        var paginatedResult =
+            objectMapper.readValue(response.getBody(), TYPE_REF);
+
+        assertThat(paginatedResult.getHits(), hasSize(1));
     }
 
     @Test
     void shouldReturnDocumentFromIndexContainingSingleHitWhenUsingTerms() throws IOException {
         var document = singleNviCandidateIndexDocument();
-        when(openSearchClient.search(any(), eq(DEFAULT_OFFSET_SIZE), eq(DEFAULT_QUERY_SIZE), any(), any())).thenReturn(
-            createSearchResponse(List.of(document), 1));
-        handler.handleRequest(request(document.identifier(), null, null), output, context);
-        var response = GatewayResponse.fromOutputStream(output, PaginatedSearchResult.class);
-        var hits = response.getBodyObject(PaginatedSearchResult.class).getHits();
-        assertEquals(1, hits.size());
-    }
+        when(openSearchClient.search(any(), any(), any(), any(), anyInt(), anyInt()))
+            .thenReturn(createSearchResponse(document));
+        handler.handleRequest(request(document.identifier()), output, context);
+        var response =
+            GatewayResponse.fromOutputStream(output, PaginatedSearchResult.class);
+        var paginatedResult =
+            objectMapper.readValue(response.getBody(), TYPE_REF);
 
-    @Test
-    void shouldReturnPaginatedSearchResultWithDefaultOffsetAndSizeIfNotGiven() throws IOException {
-        var documents = generateNumberOfIndexDocuments(10);
-        when(openSearchClient.search(any(), eq(DEFAULT_OFFSET_SIZE), eq(DEFAULT_QUERY_SIZE), any(), any())).thenReturn(
-            createSearchResponse(documents, documents.size()));
-        handler.handleRequest(request(null, null, null), output, context);
-        var response = GatewayResponse.fromOutputStream(output, PaginatedSearchResult.class);
-        var paginatedSearchResult = response.getBodyObject(PaginatedSearchResult.class);
-        assertEquals(10, paginatedSearchResult.getHits().size());
+        assertThat(paginatedResult.getHits(), hasSize(1));
     }
 
     @Test
     void shouldReturnPaginatedSearchResultWithId() throws IOException {
-        var documents = generateNumberOfIndexDocuments(1);
-        when(openSearchClient.search(any(), eq(DEFAULT_OFFSET_SIZE), eq(DEFAULT_QUERY_SIZE), any(), any())).thenReturn(
-            createSearchResponse(documents, documents.size()));
-        handler.handleRequest(request(null, null, null), output, context);
+        when(openSearchClient.search(any(), any(), any(), any(), eq(DEFAULT_OFFSET_SIZE), eq(DEFAULT_QUERY_SIZE)))
+            .thenReturn(createSearchResponse(singleNviCandidateIndexDocument()));
+        handler.handleRequest(request("*"), output, context);
         var response = GatewayResponse.fromOutputStream(output, PaginatedSearchResult.class);
         var paginatedSearchResult = response.getBodyObject(PaginatedSearchResult.class);
 
@@ -129,25 +121,48 @@ public class SearchNviCandidatesHandlerTest {
     @Test
     void shouldReturnPaginatedSearchResultWithAggregations() throws IOException {
         var documents = generateNumberOfIndexDocuments(10);
-        var aggregateName = randomString();
+        var aggregationName = randomString();
         var docCount = randomInteger();
-        when(openSearchClient.search(any(), eq(DEFAULT_OFFSET_SIZE), eq(DEFAULT_QUERY_SIZE), any(), any())).thenReturn(
-            createSearchResponse(documents, documents.size(), aggregateName, docCount));
-        handler.handleRequest(request(null, null, null), output, context);
-        var response = GatewayResponse.fromOutputStream(output, PaginatedSearchResult.class);
-        var paginatedSearchResult = response.getBodyObject(PaginatedSearchResult.class);
-        assertEquals(docCount, paginatedSearchResult.getAggregations().at("/" + aggregateName + "/docCount").asInt());
+        when(openSearchClient.search(any(), any(), any(), any(), anyInt(), anyInt()))
+            .thenReturn(createSearchResponse(documents, 10, aggregationName, docCount));
+        handler.handleRequest(request("*"), output, context);
+        var response =
+            GatewayResponse.fromOutputStream(output, PaginatedSearchResult.class);
+        var paginatedResult =
+            objectMapper.readValue(response.getBody(), TYPE_REF);
+
+        assertThat(paginatedResult.getHits(), hasSize(10));
     }
 
     @Test
     void shouldThrowExceptionWhenSearchFails() throws IOException {
         var document = singleNviCandidateIndexDocument();
-        when(openSearchClient.search(any(), eq(DEFAULT_OFFSET_SIZE), eq(DEFAULT_QUERY_SIZE), any(), any())).thenThrow(
-            RuntimeException.class);
-        handler.handleRequest(request(document.identifier(), null, null), output, context);
+        when(openSearchClient.search(any(), any(), any(), any(), anyInt(), anyInt()))
+            .thenThrow(RuntimeException.class);
+        handler.handleRequest(request(document.identifier()), output, context);
         var response = GatewayResponse.fromOutputStream(output, Problem.class);
+
         assertThat(Objects.requireNonNull(response.getBodyObject(Problem.class).getStatus()).getStatusCode(),
                    is(equalTo(HttpURLConnection.HTTP_INTERNAL_ERROR)));
+    }
+
+    private static SearchResponse<NviCandidateIndexDocument> createSearchResponse(NviCandidateIndexDocument document) {
+        return new Builder<NviCandidateIndexDocument>().hits(constructHitsMetadata(List.of(document)))
+                   .took(10)
+                   .timedOut(false)
+                   .shards(new ShardStatistics.Builder().failed(0).successful(1).total(1).build())
+                   .build();
+    }
+
+    private static SearchResponse<NviCandidateIndexDocument> createSearchResponse(
+        List<NviCandidateIndexDocument> documents, int total, String aggregateName, int docCount) {
+        return new Builder<NviCandidateIndexDocument>()
+                   .hits(constructHitsMetadata(documents))
+                   .took(10)
+                   .timedOut(false)
+                   .shards(new ShardStatistics.Builder().failed(0).successful(1).total(total).build())
+                   .aggregations(aggregateName, new Aggregate(new FilterAggregate.Builder().docCount(docCount).build()))
+                   .build();
     }
 
     private static URI constructExpectedUri(int offsetSize, int size, String searchTerm) {
@@ -159,37 +174,11 @@ public class SearchNviCandidatesHandlerTest {
                    .getUri();
     }
 
-    private static SearchResponse<NviCandidateIndexDocument> createSearchResponse(
-        List<NviCandidateIndexDocument> documents, int total) {
-        return getNviCandidateIndexDocumentBuilder(documents, total).build();
-    }
-
-    private static SearchResponse<NviCandidateIndexDocument> createSearchResponse(
-        List<NviCandidateIndexDocument> documents, int total, String aggregateName, int docCount) {
-        return getNviCandidateIndexDocumentBuilder(documents, total)
-                   .aggregations(aggregateName, generateFilterAggregate(docCount))
-                   .build();
-    }
-
-    @NotNull
-    private static Aggregate generateFilterAggregate(int docCount) {
-        return new Aggregate(new FilterAggregate.Builder().docCount(docCount).build());
-    }
-
-    @NotNull
-    private static SearchResponse.Builder<NviCandidateIndexDocument> getNviCandidateIndexDocumentBuilder(
-        List<NviCandidateIndexDocument> documents, int total) {
-        return new Builder<NviCandidateIndexDocument>().hits(constructHitsMetadata(documents))
-                   .took(10)
-                   .timedOut(false)
-                   .shards(new ShardStatistics.Builder().failed(0).successful(1).total(total).build());
-    }
-
     private static HitsMetadata<NviCandidateIndexDocument> constructHitsMetadata(
-        List<NviCandidateIndexDocument> documents) {
+        List<NviCandidateIndexDocument> document) {
         return new HitsMetadata.Builder<NviCandidateIndexDocument>()
                    .total(new TotalHits.Builder().value(10).relation(TotalHitsRelation.Eq).build())
-                   .hits(documents.stream().map(SearchNviCandidatesHandlerTest::toHit).toList())
+                   .hits(document.stream().map(SearchNviCandidatesHandlerTest::toHit).collect(Collectors.toList()))
                    .total(new TotalHits.Builder().relation(TotalHitsRelation.Eq).value(1).build())
                    .build();
     }
@@ -211,30 +200,17 @@ public class SearchNviCandidatesHandlerTest {
         return new PublicationDetails(randomString(), randomString(), randomString(), randomString(), List.of());
     }
 
-    @NotNull
-    private static Map<String, String> getQueryParameters(String searchTerm, Integer offset, Integer size) {
-        var params = new HashMap<String, String>();
-        if (Objects.nonNull(searchTerm)) {
-            params.put(QUERY_PARAM_QUERY, searchTerm);
-        }
-        if (Objects.nonNull(offset)) {
-            params.put(QUERY_PARAM_OFFSET, String.valueOf(offset));
-        }
-        if (Objects.nonNull(size)) {
-            params.put(QUERY_PARAM_SIZE, String.valueOf(size));
-        }
-        return params;
-    }
-
     private List<NviCandidateIndexDocument> generateNumberOfIndexDocuments(int number) {
         return IntStream.range(0, number).boxed().map(i -> singleNviCandidateIndexDocument()).toList();
     }
 
-    private InputStream request(String searchTerm, Integer offset, Integer size) throws JsonProcessingException {
+    private InputStream request(String searchTerm) throws JsonProcessingException {
         return new HandlerRequestBuilder<Void>(JsonUtils.dtoObjectMapper)
                    .withTopLevelCristinOrgId(randomUri())
                    .withUserName(randomString())
-                   .withQueryParameters(getQueryParameters(searchTerm, offset, size))
+                   .withQueryParameters(Map.of("query", searchTerm,
+                                               "offset", String.valueOf(DEFAULT_OFFSET_SIZE),
+                                               "size", String.valueOf(DEFAULT_QUERY_SIZE)))
                    .build();
     }
 }
